--- a/src/resoucres/scss/app.scss
+++ b/src/resoucres/scss/app.scss
@@ -1,6 +1,14 @@
 * {
     box-sizing: border-box;
 }
+.box-df {
+    background-color: #fff;
+    min-height: 20px;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 4px !important;
+}
+
 .button {
     font-size: 16px;
     padding: 0 20px 0 20px;
@@ -27,6 +35,9 @@
     height: 57px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     padding: 0 50px 0 50px;
+    a {
+        color: 667580;
+    }
     .header_content {
         display: flex;
         align-items: center;
@@ -69,6 +80,7 @@
         .menu_top {
             position: absolute;
             right: 0;
+
             ul {
                 font-size: 16px;
                 display: flex;
@@ -80,10 +92,83 @@
                         text-decoration: none;
                     }
                 }
+                .us-links {
+                    display: none;
+                    position: absolute;
+                    top: 50px;
+                    right: 20px;
+                    border: 1px solid #e7ecf0;
+                    padding: 0;
+                    cursor: pointer;
+                    li {
+                        padding: 0;
+                        border-bottom: 1px solid #e7ecf0;
+                        a {
+                            font-size: 13px;
+                            padding: 10px 20px;
+                            display: block;
+                        }
+                    }
+                }
             }
         }
     }
 }
 #container {
-    margin-top: 57px;
+    height: 100%;
+    margin-top: 67px;
+    background-color: #e7ecf0;
+    .content {
+        margin: 0 40px;
+        padding-top: 10px;
+        .profile-user {
+            height: 238px;
+            .profile-title {
+                font-size: 18px;
+                line-height: 18px;
+                padding: 10px 5px;
+                font-weight: 600;
+            }
+            .profile-body {
+                .profile-userpic img {
+                    width: 120px;
+                    height: 120px;
+                    margin-bottom: 10px;
+                    border-radius: 50%;
+                }
+                .profile-userdoc {
+                    display: flex;
+                    ul {
+                        list-style: none;
+                        li {
+                            font-size: 14px;
+                            opacity: 0.8;
+                            padding: 5px 10px;
+                            span {
+                                opacity: 1;
+                                font-weight: 700;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .study-schedule {
+            a {
+                text-decoration: none;
+            }
+        }
+        .featured {
+            a {
+                text-decoration: none;
+            }
+            .featured-item {
+                height: 100px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                text-align: center;
+            }
+        }
+    }
 }
