--- a/src/resoucres/views/dashboard.hbs
+++ b/src/resoucres/views/dashboard.hbs
@@ -59,12 +59,11 @@
                     <div class='study-schedule'>
                         <div class='col'>
                             <div class='box-df study-schedule-week'>
-                                <a href=''>
+                                <a
+                                    href='/student/get-study-schedule?date={{today.date}}&month={{today.month}}&year={{today.year}}'
+                                >
                                     <h3 class='name'>Lịch học trong tuần</h3>
-                                    <div class='desc clearfix'>
-                                        <div class='number'>6</div>
 
-                                    </div>
                                     <div class='text-left'>
                                         Xem chi tiết
                                     </div>
@@ -96,12 +95,12 @@
 
                     <div class='col'>
 
-                        <a href='test'>
+                        <a href='student/getListLhp-registed'>
                             <div class='box-df featured-item'>
                                 <div class='icon'>
                                     <i class='fa fa-briefcase' aria-hidden='true'></i>
                                 </div>
-                                <span>Danh sách lớp</span>
+                                <span>Danh sách lớp học phần</span>
                             </div>
                         </a>
 
@@ -118,43 +117,7 @@
                         </a>
 
                     </div>
-                    <div class='col'>
 
-                        <a href='#'>
-                            <div class='box-df featured-item'>
-                                <div class='icon'>
-                                    <i class='fa fa-calendar' aria-hidden='true'></i>
-                                </div>
-                                <span>Lịch theo tuần</span>
-                            </div>
-                        </a>
-
-                    </div>
-                    <div class='col'>
-
-                        <a href='#'>
-                            <div class='box-df featured-item'>
-                                <div class='icon'>
-                                    <i class='fa fa-newspaper-o' aria-hidden='true'></i>
-                                </div>
-                                <span>Lịch theo tiến độ</span>
-                            </div>
-                        </a>
-
-                    </div>
-                    <div class='col'>
-
-                        <a href='#'>
-                            <div class='box-df featured-item'>
-                                <div class='icon'>
-
-                                    <i class='fa fa-calendar-check-o' aria-hidden='true'></i>
-                                </div>
-                                <span>Lịch toàn trường</span>
-                            </div>
-                        </a>
-
-                    </div>
                     <div class='col'>
 
                         <a href='student/getListLhp-open'>
