--- a/src/resoucres/views/featured_form/teacher/create_lhp.hbs
+++ b/src/resoucres/views/featured_form/teacher/create_lhp.hbs
@@ -1,19 +1,120 @@
-<form action='create_lhp' method='post'>
-    <label for=''>Tên Học Phần</label>
-    <input type='text' name='name' />
-    <p>Tình trạng</p>
+<h1
+    style='text-align: center;
+    padding: 20px;'
+>Tạo lớp học phần</h1>
+<form action='create_lhp' method='post' style='width:400px; margin:auto'>
+    <div class='mb-3'>
+        <label for='name' class='form-label'>Tên lớp học phần</label>
+        <input type='text' class='form-control' id='name' name='name' required />
 
-    <label for='stateOpen'>Mở</label>
-    <input type='radio' id='stateOpen' name='state' value='1' />
-    <label for='stateClose'>Đóng</label>
-    <input type='radio' id='stateClose' name='state' value='0' />
-    <label for='quantityOfStudens'>số lượng sinh viên</label>
-    <input type='number' id='quantityOfStudens' name='quantityOfstudents' />
-    <label for='quantityOftinchi'>số lượng tín chỉ</label>
-    <input type='number' id='quantityOftinchi' name='quantityoftinchi' />
-    <input type='submit' value='Tạo' />
+    </div>
+    <div style='display: flex;justify-content: space-between;' class='mb-3'>
+        <div class=''>
 
-    {{#if lophocphanData}}
-        <p>{{lophocphanData.message}}</p>
-    {{/if}}
+            <label for='state' class='form-label'>Trạng thái lớp học phần:</label>
+            <select name='state' style='display: block;' name='' id='state'>
+
+                <option value='1' selected>Mở</option>
+                <option value='0'>Đóng</option>
+
+            </select>
+        </div>
+        <div class=''>
+            <label for='tinchi' class='form-label'>Số lượng tín chỉ:</label>
+            <input
+                name='quantityoftinchi'
+                type='number'
+                class='form-control'
+                id='tinchi'
+                placeholder='1 tín = 10 tiết'
+                required
+            />
+        </div>
+
+    </div>
+    <div
+        style='display: flex;
+    justify-content: space-between;'
+        class='mb-3'
+    >
+        <div class=''>
+
+            <label for='quantity' class='form-label'>Số lượng sinh viên:</label>
+            <input
+                name='quantityOfstudents'
+                style='width: 50%;'
+                type='number'
+                class='form-control'
+                id='quantity'
+                required
+            />
+        </div>
+
+    </div>
+    <div
+        style='display: flex;
+    justify-content: space-between;'
+        class='mb-3'
+    >
+        <div class=''>
+            <label for='startDateString' class='form-label'>Ngày bắt đầu:</label>
+
+            <select name='startDateString' style='display: block;' id='startDateString'>
+
+            </select>
+
+        </div>
+        <div class=''>
+            <label for='timeStart' class='form-label'>Học từ tiết: </label>
+
+            <select name='timeStart' style='display: block;' name='' id='timeStart'>
+                <option value='1' selected>1 </option>
+                <option value='6'>6</option>
+                <option value='11'>11</option>
+
+            </select>
+
+        </div>
+        <div class=''>
+            <label for='slTiet1buoi' class='form-label'>Số lượng tiết 1 buổi :</label>
+            <select name='slTiet1buoi' style='display: block;' name='' id='slTiet1buoi'>
+                <option value='1'>1 </option>
+                <option value='2'>2</option>
+                <option value='3' selected>3 </option>
+                <option value='4'>4</option>
+
+            </select>
+
+        </div>
+
+    </div>
+    <div
+        class='mb-3'
+        style='display: flex;
+    justify-content: space-between;'
+    >
+        <div>
+            <label for='monday'>Thứ Hai:</label>
+            <input type='checkbox' id='monday' value='2' name='daysOffWeek' />
+        </div>
+        <div>
+            <label for='tuesday'>Thứ Ba:</label>
+            <input type='checkbox' id='tuesday' value='3' name='daysOffWeek' />
+        </div>
+        <div>
+            <label for='wednesday'>Thứ Tư:</label>
+            <input type='checkbox' id='wednesday' value='4' name='daysOffWeek' />
+        </div>
+        <div>
+            <label for='thursday'>Thứ Năm:</label>
+            <input type='checkbox' id='thursday' value='5' name='daysOffWeek' />
+        </div>
+        <div>
+            <label for='friday'>Thứ Sáu:</label>
+            <input type='checkbox' id='friday' value='6' name='daysOffWeek' />
+        </div>
+
+    </div>
+    <button type='submit' class='btn btn-primary'>Tạo</button>
 </form>
+<script src='js/teacher/createLhp.js'> </script>
