--- a/src/resoucres/views/featured_form/teacher/create_lhp.hbs
+++ b/src/resoucres/views/featured_form/teacher/create_lhp.hbs
@@ -12,7 +12,7 @@
         <div class=''>
 
             <label for='state' class='form-label'>Trạng thái lớp học phần:</label>
-            <select name='state' style='display: block;' name='' id='state'>
+            <select name='state' style='display: block;' id='state'>
 
                 <option value='1' selected>Mở</option>
                 <option value='0'>Đóng</option>
@@ -60,7 +60,7 @@
             <label for='startDateString' class='form-label'>Ngày bắt đầu:</label>
 
             <select name='startDateString' style='display: block;' id='startDateString'>
-
+                {{! content in js }}
             </select>
 
         </div>
@@ -95,23 +95,23 @@
     >
         <div>
             <label for='monday'>Thứ Hai:</label>
-            <input type='checkbox' id='monday' value='2' name='daysOffWeek' />
+            <input type='checkbox' id='monday' value='1' name='daysOffWeek' />
         </div>
         <div>
             <label for='tuesday'>Thứ Ba:</label>
-            <input type='checkbox' id='tuesday' value='3' name='daysOffWeek' />
+            <input type='checkbox' id='tuesday' value='2' name='daysOffWeek' />
         </div>
         <div>
             <label for='wednesday'>Thứ Tư:</label>
-            <input type='checkbox' id='wednesday' value='4' name='daysOffWeek' />
+            <input type='checkbox' id='wednesday' value='3' name='daysOffWeek' />
         </div>
         <div>
             <label for='thursday'>Thứ Năm:</label>
-            <input type='checkbox' id='thursday' value='5' name='daysOffWeek' />
+            <input type='checkbox' id='thursday' value='4' name='daysOffWeek' />
         </div>
         <div>
             <label for='friday'>Thứ Sáu:</label>
-            <input type='checkbox' id='friday' value='6' name='daysOffWeek' />
+            <input type='checkbox' id='friday' value='5' name='daysOffWeek' />
         </div>
 
     </div>
