--- a/src/resoucres/views/layouts/main.hbs
+++ b/src/resoucres/views/layouts/main.hbs
@@ -105,9 +105,9 @@
             <div id='container'>
                 {{{body}}}
             </div>
-            <div id='footer'>
+            {{! <div id='footer'>
 
-            </div>
+            </div> }}
         </div>
     </body>
 </html>
