--- a/src/resoucres/views/featured_form/student/studySchedule.hbs
+++ b/src/resoucres/views/featured_form/student/studySchedule.hbs
@@ -1,19 +1,34 @@
 <h1 style='text-align: center; padding:20px'>Lịch học trong tuần</h1>
 <div
-    style='display: flex; flex-wrap: wrap; max-width:1000px;margin:auto;justify-content: space-around;'
+    style='display: flex; flex-wrap: wrap; max-width:1000px;margin:auto;justify-content: space-around;    align-items: center;'
     class='studySchedule'
 >
-    <a href=''> <button type='button' class='btn btn-outline-primary'>Tuần Trước</button></a>
-
-    {{#each studySchedule.data}}
-        <div style='padding: 10px;width:20%;text-align: center;  border: 2px solid ; ' class=''>
-            <p>Học Phần {{this.name}}</p>
-            <p> {{this.dayOfWeek}}</p>
-            <p>Ngày {{this.date}}</p>
-            <p>Bắt dầu: {{this.startTime}} - Kết thúc: {{this.endTime}}</p>
-            <p>Giáo viên: {{this.teacherName}}</p>
+    <a href='/student/get-study-schedule?date={{lastMonday.date}}&month={{lastMonday.month}}&year={{lastMonday.year}}'>
+        <button type='button' class='btn btn-outline-primary'>Tuần Trước</button></a>
+    {{#if studySchedule.data}}
+        {{#each studySchedule.data}}
+            <div style='padding: 10px;width:20%;text-align: center;  border: 2px solid ; ' class=''>
+                <p>Học Phần {{this.name}}</p>
+                <p> {{this.dayOfWeek}}</p>
+                <p>Ngày {{this.date}}</p>
+                <p>Bắt dầu: {{this.startTime}} - Kết thúc: {{this.endTime}}</p>
+                <p>Giáo viên: {{this.teacherName}}</p>
+            </div>
+        {{/each}}
+    {{else}}
+        <div style='text-align: center;' class='alert alert-primary' role='alert'>
+            {{studySchedule.message}}
         </div>
-
-    {{/each}}
-    <a href=''> <button type='button' class='btn btn-outline-primary'>Tuần Tiếp</button></a>
+    {{/if}}
+    <a href='/student/get-study-schedule?date={{nextMonday.date}}&month={{nextMonday.month}}&year={{nextMonday.year}}'>
+        <button type='button' class='btn btn-outline-primary'>Tuần Tiếp</button></a>
+</div>
+<div
+    style='text-align: center; padding:20px; border: 2px solid; width:300px;    margin: auto;
+    margin-top: 20px;'
+    class=''
+>
+    {{thisMondayString}}
+    -->
+    {{thisSundayString}}
 </div>
