--- a/src/resoucres/views/dashboard.hbs
+++ b/src/resoucres/views/dashboard.hbs
@@ -200,7 +200,9 @@
                     <div class='study-schedule'>
                         <div class='col'>
                             <div class='box-df study-schedule-week'>
-                                <a href=''>
+                                <a
+                                    href='teacher/get-week-teach-schedule?date={{today.date}}&month={{today.month}}&year={{today.year}}'
+                                >
                                     <h3 class='name'>Lịch dạy trong tuần</h3>
                                     <div class='desc clearfix'>
                                         <div class='number'>6</div>
@@ -249,7 +251,7 @@
                     </div>
                     <div class='col'>
 
-                        <a href='#'>
+                        <a href='teacher/list_lhp?grading=1'>
                             <div class='box-df featured-item'>
                                 <div class='icon'>
                                     <i class='fa fa-bar-chart' aria-hidden='true'></i>
@@ -259,43 +261,7 @@
                         </a>
 
                     </div>
-                    <div class='col'>
 
-                        <a href='#'>
-                            <div class='box-df featured-item'>
-                                <div class='icon'>
-                                    <i class='fa fa-calendar' aria-hidden='true'></i>
-                                </div>
-                                <span>Lịch theo tuần</span>
-                            </div>
-                        </a>
-
-                    </div>
-                    <div class='col'>
-
-                        <a href='#'>
-                            <div class='box-df featured-item'>
-                                <div class='icon'>
-                                    <i class='fa fa-newspaper-o' aria-hidden='true'></i>
-                                </div>
-                                <span>Lịch theo tiến độ</span>
-                            </div>
-                        </a>
-
-                    </div>
-                    <div class='col'>
-
-                        <a href='#'>
-                            <div class='box-df featured-item'>
-                                <div class='icon'>
-
-                                    <i class='fa fa-calendar-check-o' aria-hidden='true'></i>
-                                </div>
-                                <span>Lịch toàn trường</span>
-                            </div>
-                        </a>
-
-                    </div>
                     <div class='col'>
 
                         <a href='teacher/create-lophocphan-form'>
