--- a/src/resoucres/views/featured_form/teacher/list_lhp.hbs
+++ b/src/resoucres/views/featured_form/teacher/list_lhp.hbs
@@ -32,7 +32,7 @@
 
                             <a href='/teacher/get-student-lhp-list?lhpId={{this.lhpId}}&name={{this.name}}'>
                                 <button type='button' class='btn btn-secondary'>
-                                    Danh sách sinh viên
+                                    Chấm điểm
 
                                 </button>
                             </a>
