--- a/src/resoucres/views/featured_form/student/studySchedule.hbs
+++ b/src/resoucres/views/featured_form/student/studySchedule.hbs
@@ -1,16 +1,44 @@
 {{#if studySchedule}}
     <h1 style='text-align: center; padding:20px'>Lịch học trong tuần</h1>
     <div
-        style='display: flex; flex-wrap: wrap; max-width:1000px;margin:auto;justify-content: space-around;    align-items: center;'
-        class='studySchedule'
+        style='text-align: center;
+    padding: 20px;
+    border: 2px solid;
+    width: 450px;
+    display: flex;
+    margin: auto;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;'
+        class=''
     >
         <a
             href='/student/get-study-schedule?date={{lastMonday.date}}&month={{lastMonday.month}}&year={{lastMonday.year}}'
         >
             <button type='button' class='btn btn-outline-primary'>Tuần Trước</button></a>
+        <div class=''>
+
+            {{thisMondayString}}
+            -->
+            {{thisSundayString}}
+        </div>
+        <a
+            href='/student/get-study-schedule?date={{nextMonday.date}}&month={{nextMonday.month}}&year={{nextMonday.year}}'
+        >
+            <button type='button' class='btn btn-outline-primary'>Tuần Tiếp</button></a>
+    </div>
+
+    <div
+        style='display: flex;
+    flex-wrap: wrap;
+    justify-content: center;'
+        class='studySchedule'
+    >
+
         {{#if studySchedule.data}}
             {{#each studySchedule.data}}
-                <div style='padding: 10px;width:20%;text-align: center;  border: 2px solid ; ' class=''>
+                <div style='margin: 10px;text-align: center;  border: 2px solid ; ' class=''>
                     <p>Học Phần {{this.name}}</p>
                     <p> {{this.dayOfWeek}}</p>
                     <p>Ngày {{this.date}}</p>
@@ -23,22 +51,11 @@
                 {{studySchedule.message}}
             </div>
         {{/if}}
-        <a
-            href='/student/get-study-schedule?date={{nextMonday.date}}&month={{nextMonday.month}}&year={{nextMonday.year}}'
-        >
-            <button type='button' class='btn btn-outline-primary'>Tuần Tiếp</button></a>
+
     </div>
-    <div
-        style='text-align: center; padding:20px; border: 2px solid; width:300px;    margin: auto;
-    margin-top: 20px;'
-        class=''
-    >
-        {{thisMondayString}}
-        -->
-        {{thisSundayString}}
-    </div>
+
 {{else}}
-    <h1 style='text-align: center; padding:20px'>Lịch dạy trong tuần</h1>
+    {{!-- <h1 style='text-align: center; padding:20px'>Lịch dạy trong tuần</h1>
     <div
         style='display: flex; flex-wrap: wrap; max-width:1000px;margin:auto;justify-content: space-around;    align-items: center;'
         class='studySchedule'
@@ -75,5 +92,58 @@
         {{thisMondayString}}
         -->
         {{thisSundayString}}
+    </div> --}}
+    <h1 style='text-align: center; padding:20px'>Lịch dạy trong tuần</h1>
+    <div
+        style='text-align: center;
+    padding: 20px;
+    border: 2px solid;
+    width: 450px;
+    display: flex;
+    margin: auto;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;'
+        class=''
+    >
+        <a
+            href='/teacher/get-week-teach-schedule?date={{lastMonday.date}}&month={{lastMonday.month}}&year={{lastMonday.year}}'
+        >
+            <button type='button' class='btn btn-outline-primary'>Tuần Trước</button></a>
+        <div class=''>
+
+            {{thisMondayString}}
+            -->
+            {{thisSundayString}}
+        </div>
+        <a
+            href='/teacher/get-week-teach-schedule?date={{nextMonday.date}}&month={{nextMonday.month}}&year={{nextMonday.year}}'
+        >
+            <button type='button' class='btn btn-outline-primary'>Tuần Tiếp</button></a>
+    </div>
+
+    <div
+        style='display: flex;
+    flex-wrap: wrap;
+    justify-content: center;'
+        class='studySchedule'
+    >
+
+        {{#if teachSchedule.data}}
+            {{#each teachSchedule.data}}
+                <div style='margin: 10px;text-align: center;  border: 2px solid ; ' class=''>
+                    <p>Học Phần {{this.name}}</p>
+                    <p> {{this.dayOfWeek}}</p>
+                    <p>Ngày {{this.date}}</p>
+                    <p>Bắt dầu: {{this.startTime}} - Kết thúc: {{this.endTime}}</p>
+                </div>
+            {{/each}}
+        {{else}}
+            <div style='text-align: center;' class='alert alert-primary' role='alert'>
+                {{teachSchedule.message}}
+            </div>
+        {{/if}}
+
     </div>
 {{/if}}
