--- a/src/resoucres/views/dashboard.hbs
+++ b/src/resoucres/views/dashboard.hbs
@@ -12,7 +12,7 @@
                     </div>
                     <div class='profile-body'>
 
-                        <div class='row'>
+                        <div class='row' style='align-items: center;'>
                             <div class='col-sm-3'>
                                 <div class='profile-userpic'>
                                     <img
@@ -22,28 +22,20 @@
                                     />
 
                                 </div>
-                                <div class='text-center'>
-                                    <a
-                                        href='/thong-tin-sinh-vien.html'
-                                        class='color-active'
-                                        lang='db-chitiet-button'
-                                    >Xem chi tiết</a>
-                                </div>
+
                             </div>
                             <div class='col-sm-9'>
                                 <div class='profile-userdoc'>
                                     <ul>
                                         <li>MSSV: <span>{{{userData.svId}}}</span></li>
                                         <li>Họ tên:<span>{{{userData.FirstName}}} {{{userData.LastName}}}</span> </li>
-                                        <li>Gới tính: <span></span></li>
+                                        <li>Gới tính: <span>{{userData.sex}}</span></li>
                                         <li>Ngày sinh: <span>{{{userData.birtday}}}</span></li>
                                         <li>Nơi sinh:<span>{{{userData.adress}}}</span> </li>
                                     </ul>
                                     <ul>
                                         <li>Lớp học:<span>{{{userData.classCode}}}</span></li>
                                         <li>Khóa học:<span>{{{userData.makhoa}}}</span></li>
-                                        <li>Bậc đào tạo:<span></span></li>
-                                        <li>Chức vụ :<span></span></li>
                                         <li>Nghành:<span>{{{userData.majorCode}}}</span></li>
                                     </ul>
                                 </div>
@@ -58,20 +50,25 @@
                 <div class='row'>
                     <div class='study-schedule'>
                         <div class='col'>
-                            <div class='box-df study-schedule-week'>
-                                <a
-                                    href='/student/get-study-schedule?date={{today.date}}&month={{today.month}}&year={{today.year}}'
-                                >
-                                    <h3 class='name'>Lịch học trong tuần</h3>
+                            <div style='background: #e0fbff;color: #4da1e8;' class='box-df study-schedule-week'>
 
-                                    <div class='text-left'>
+                                <h3 class='name'>Lịch học trong tuần</h3>
+                                <div class='desc clearfix'>
+                                    <div class='number'>Có {{numberOfStudying}} buổi học tuần này !</div>
+
+                                </div>
+                                <div class='text-left'>
+                                    <a
+                                        href='/student/get-study-schedule?date={{today.date}}&month={{today.month}}&year={{today.year}}'
+                                    >
                                         Xem chi tiết
-                                    </div>
-                                </a>
+                                    </a>
+                                </div>
+
                             </div>
                         </div>
                         <div class='col'>
-                            <div class='box-df exam-schedule-week'>
+                            <div style='background: #fff2d4;color: #ff9205;' class='box-df exam-schedule-week'>
                                 <a href=''>
                                     <h3 class='name'>Lịch thi trong tuần</h3>
                                     <div class='desc clearfix'>
@@ -107,7 +104,7 @@
                     </div>
                     <div class='col'>
 
-                        <a href='#'>
+                        <a href='student/get-study-core '>
                             <div class='box-df featured-item'>
                                 <div class='icon'>
                                     <i class='fa fa-bar-chart' aria-hidden='true'></i>
@@ -145,7 +142,7 @@
                 </div>
             </div>
         </div>
-        <div class='row'></div>
+
     {{else}}
         <div class='row'>
             <div class='col'>
@@ -199,23 +196,24 @@
                 <div class='row'>
                     <div class='study-schedule'>
                         <div class='col'>
-                            <div class='box-df study-schedule-week'>
-                                <a
-                                    href='teacher/get-week-teach-schedule?date={{today.date}}&month={{today.month}}&year={{today.year}}'
-                                >
-                                    <h3 class='name'>Lịch dạy trong tuần</h3>
-                                    <div class='desc clearfix'>
-                                        <div class='number'>6</div>
+                            <div style='background: #e0fbff;color: #4da1e8;' class='box-df study-schedule-week'>
 
-                                    </div>
-                                    <div class='text-left'>
+                                <h3 class='name'>Lịch dạy trong tuần</h3>
+                                <div class='desc clearfix'>
+                                    <div class='number'>Có {{numberOfTeaching}} buổi dạy trong tuần này !</div>
+
+                                </div>
+                                <div class='text-left'>
+                                    <a
+                                        href='teacher/get-week-teach-schedule?date={{today.date}}&month={{today.month}}&year={{today.year}}'
+                                    >
                                         Xem chi tiết
-                                    </div>
-                                </a>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <div class='col'>
-                            <div class='box-df exam-schedule-week'>
+                            <div style='background: #fff2d4;color: #ff9205;' class='box-df exam-schedule-week'>
                                 <a href=''>
                                     <h3 class='name'>Lịch coi thi trong tuần</h3>
                                     <div class='desc clearfix'>
@@ -289,7 +287,6 @@
                 </div>
             </div>
         </div>
-        <div class='row'></div>
 
     {{/if}}
 </div>
