--- a/src/resoucres/views/dashboard.hbs
+++ b/src/resoucres/views/dashboard.hbs
@@ -69,12 +69,9 @@
                         </div>
                         <div class='col'>
                             <div style='background: #fff2d4;color: #ff9205;' class='box-df exam-schedule-week'>
-                                <a href=''>
-                                    <h3 class='name'>Lịch thi trong tuần</h3>
-                                    <div class='desc clearfix'>
-                                        <div class='number'>6</div>
+                                <h3 class='name'>Lịch thi tất các các học phần </h3>
 
-                                    </div>
+                                <a href='/student/get-exam-schedule'>
                                     <div class='text-left'>
                                         Xem chi tiết
                                     </div>
@@ -214,12 +211,9 @@
                         </div>
                         <div class='col'>
                             <div style='background: #fff2d4;color: #ff9205;' class='box-df exam-schedule-week'>
-                                <a href=''>
-                                    <h3 class='name'>Lịch coi thi trong tuần</h3>
-                                    <div class='desc clearfix'>
-                                        <div class='number'>6</div>
+                                <h3 class='name'>Lịch coi thi tất cả các học phần</h3>
+                                <a href='/teacher/get-exam-watching-schedule'>
 
-                                    </div>
                                     <div class='text-left'>
                                         Xem chi tiết
                                     </div>
